fix: Fixed alert boxes cutoff half way on split view, b=(closes #7564), c=split-view

--- a/src/zen/split-view/zen-decks.css
+++ b/src/zen/split-view/zen-decks.css
@@ -34,6 +34,11 @@
   margin-left: 0 !important;
   position: absolute !important;
   overflow: hidden;
+
+  &.deck-selected:has(.dialogStack:not([hidden='true'])) {
+    /* Fix for issue https://github.com/zen-browser/desktop/issues/7564 */
+    z-index: 1; 
+  }
 }
 
 #tabbrowser-tabpanels[zen-split-view='true']:not([zen-split-resizing]) > [zen-split-anim='true'] {
